# drf_custom_user_swagger

./: manage.py  pyproject.toml
app/users/: admin.py  managers.py  models.py  permissions.py
app/users/migrations/: 0001_initial.py
app/users/serializers/: list.py  retrieve.py
app/users/views/: list.py  retrieve.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
